--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username= postgres
-spring.datasource.password= admin
+spring.datasource.url=jdbc:postgresql://uifclnppiiruf4visplq:i99KFwPmVIT6ayWH0pCb8eEufIx0jp@bdfimrtaqgvld9xabnkf-postgresql.services.clever-cloud.com:5432/bdfimrtaqgvld9xabnkf
+spring.datasource.username=uifclnppiiruf4visplq
+spring.datasource.password=i99KFwPmVIT6ayWH0pCb8eEufIx0jp
 #spring.datasource.password= d3p..2020
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
