--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
     <name>back-end-libros</name>
     <description>back-end-libros</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>11</java.version>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
     </properties>
     <dependencies>
         <dependency>
@@ -63,12 +65,7 @@
                     </excludes>
                 </configuration>
             </plugin>
-
-            
-
         </plugins>
     </build>
-
-
 
 </project>
