--- a/clever cloud/manifest.json
+++ b/clever cloud/manifest.json
@@ -1,8 +1,7 @@
 {
   "build": {
     "language": "java",
-    "goal": "package",
-    "clean": "mvn clean"
+    "goal": "package"
   },
   "deploy": {
     "jarName": "back-end-libros-0.0.1-SNAPSHOT.jar"
