--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://uifclnppiiruf4visplq:i99KFwPmVIT6ayWH0pCb8eEufIx0jp@bdfimrtaqgvld9xabnkf-postgresql.services.clever-cloud.com:5432/bdfimrtaqgvld9xabnkf
+spring.datasource.url=jdbc:postgresql://bdfimrtaqgvld9xabnkf-postgresql.services.clever-cloud.com:5432/bdfimrtaqgvld9xabnkf
 spring.datasource.username=uifclnppiiruf4visplq
 spring.datasource.password=i99KFwPmVIT6ayWH0pCb8eEufIx0jp
 #spring.datasource.password= d3p..2020
